--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,3 +1,5 @@
+php_value always_populate_raw_post_data -1
+
 <IfModule mod_rewrite.c>
     RewriteEngine On
     RewriteCond %{REQUEST_FILENAME} !-f
